; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/gatt_security_server/main/extr_example_ble_sec_gatts_demo.c_esp_auth_req_to_str.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/gatt_security_server/main/extr_example_ble_sec_gatts_demo.c_esp_auth_req_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"ESP_LE_AUTH_NO_BOND\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"ESP_LE_AUTH_BOND\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"ESP_LE_AUTH_REQ_MITM\00", align 1
@.str.3 = private unnamed_addr constant [26 x i8] c"ESP_LE_AUTH_REQ_BOND_MITM\00", align 1
@.str.4 = private unnamed_addr constant [24 x i8] c"ESP_LE_AUTH_REQ_SC_ONLY\00", align 1
@.str.5 = private unnamed_addr constant [24 x i8] c"ESP_LE_AUTH_REQ_SC_BOND\00", align 1
@.str.6 = private unnamed_addr constant [24 x i8] c"ESP_LE_AUTH_REQ_SC_MITM\00", align 1
@.str.7 = private unnamed_addr constant [29 x i8] c"ESP_LE_AUTH_REQ_SC_MITM_BOND\00", align 1
@.str.8 = private unnamed_addr constant [21 x i8] c"INVALID BLE AUTH REQ\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @esp_auth_req_to_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @esp_auth_req_to_str(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %3, align 8
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %13 [
    i32 134, label %5
    i32 135, label %6
    i32 132, label %7
    i32 133, label %8
    i32 128, label %9
    i32 131, label %10
    i32 130, label %11
    i32 129, label %12
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %14

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %14

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %14

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %14

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %14

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  br label %14

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.6, i64 0, i64 0), i8** %3, align 8
  br label %14

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.7, i64 0, i64 0), i8** %3, align 8
  br label %14

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.8, i64 0, i64 0), i8** %3, align 8
  br label %14

14:                                               ; preds = %13, %12, %11, %10, %9, %8, %7, %6, %5
  %15 = load i8*, i8** %3, align 8
  ret i8* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
